aux_source_directory(. DIR_LIB_SRCS)
add_library(core STATIC ${DIR_LIB_SRCS})

set_target_properties(core PROPERTIES CXX_STANDARD 20)

if (${CANDY_STATIC})
    target_link_libraries(core PRIVATE fmt::fmt)
    target_link_libraries(core PRIVATE spdlog::spdlog)
    target_link_libraries(core PRIVATE ${OPENSSL_LIB_CRYPTO} ${OPENSSL_LIB_SSL})
    target_link_libraries(core PRIVATE Poco::Foundation Poco::Net Poco::NetSSL)
else()
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(DEPS REQUIRED fmt spdlog)
    add_definitions(${DEPS_CFLAGS})
    include_directories(${DEPS_INCLUDEDIR})
    target_link_libraries(core PRIVATE ${DEPS_LIBRARIES})
endif()

target_link_libraries(core PRIVATE websocket)
target_link_libraries(core PRIVATE tun)
target_link_libraries(core PRIVATE peer)
